# AlphaForge-Brain

./: .dockerignore  .gitignore  .mypy_snapshot_src.json  .plan_vars.json  .pre-commit-config.yaml  .ruff.toml  .spectral.yaml  ARCH_MIGRATION_RETROSPECTIVE.md  CHANGELOG.md  CLEANUP_REPORT.md  Dockerfile  Makefile  README.md  TESTING.md  TESTING_DELTA.md  TYPE_HYGIENE_STATUS.md  WAIVERS.md  base-1758390645499-6dk5ol5gib.yaml  diff_test.md  docker-entrypoint.sh  launch-alphaforge.ps1  mypy.ini  mypy.strictplus.ini  mypy_baseline.txt  mypy_diff.md  mypy_final.txt  openapi.deref.json  openapi.html  openapi.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  ruff.strictplus.toml  typing_timing.json  typing_timing.md
.cache/datasets/: nvda_9bf66beef6a2.json  nvda_b172ce6927ea.json
.github/workflows/: ci.yml  contract-conformance.yml  mind-tests.yml  openapi-diff.yml  spectral-auto-update.yml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
alphaforge-brain/: ARCH_MIGRATION_STATUS.md  README.md
alphaforge-brain/contracts/: completed_trade.example.json  equity_bar.example.json  fill.example.json  run_payload.example.json
alphaforge-brain/scripts/: snapshot_equity_hash_baseline.py
alphaforge-brain/tests/: conftest.py  factories.py
alphaforge-mind/: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
alphaforge-mind/specs/006-begin-work-on/: a11y-baseline.md
alphaforge-mind/src/: App.tsx  __init__.py  alphaforge_mind_client.py  client.py  main.tsx
alphaforge-mind/src/components/: ErrorBanner.tsx
alphaforge-mind/src/components/backtest/: AdvancedValidationToggles.tsx  BacktestForm.tsx  EquityCurveChart.tsx  ExportConfigModal.tsx  MetricsGrid.tsx  MonteCarloChart.tsx  MonteCarloOverlay.ts  MonteCarloOverlay.tsx  PercentileModeToggle.tsx  RunHistory.tsx  TradesSummaryTable.tsx  ValidationSummary.tsx  WalkForwardSplitsChart.tsx
alphaforge-mind/src/components/charts/: CandleChart.tsx  IndicatorManager.tsx  IndicatorPanel.tsx
alphaforge-mind/src/components/common/: ErrorBoundary.tsx  SlowNotice.tsx
alphaforge-mind/src/errors/: errorMessages.ts
alphaforge-mind/src/hooks/: useBacktestRun.ts  useCandles.ts
alphaforge-mind/src/net/: client.ts  errors.ts
alphaforge-mind/src/pages/: BacktestValidationPage.tsx  ChartAnalysisPage.tsx
alphaforge-mind/src/services/api/: canonical.ts  client.ts  schemaValidator.ts  timing.ts
alphaforge-mind/src/state/: errors.ts  featureFlags.ts  store.ts  ui.ts
alphaforge-mind/src/styles/: index.css
alphaforge-mind/src/utils/: canonicalJson.ts  monteCarloStats.ts  perfProbe.ts  random.ts  seriesTransforms.ts  validation.ts
alphaforge-mind/tests/: setup.ts  test_hello_run_sdk.py  test_retention_diff_sdk.py
alphaforge-mind/tests/a11y/: backtestPageA11y.test.tsx
alphaforge-mind/tests/components/: ErrorBanner.test.tsx
alphaforge-mind/tests/contracts/: backtest-result.contract.test.ts  backtest-run-request.contract.test.ts  candles.contract.test.ts  extended-alpha.contract.test.ts  montecarlo.contract.test.ts
alphaforge-mind/tests/integration/: backtestKeyboardNav.test.tsx  backtestResultsSwitch.test.tsx  backtestRunLifecycle.test.tsx  backtestSlowNotice.test.tsx  backtestValidation.test.tsx  canonicalContract.test.ts  chartPage.test.tsx  correlationClient.test.ts  errorMapping.test.tsx  exportConfig.test.tsx  exportConfigDeterminism.test.ts  exportConfigModalPayload.test.tsx  exportConfigModalVerify.test.tsx  indicatorsPersistence.test.tsx  longDateSpanWarning.test.tsx  montecarloRender.test.tsx  progressiveMonteCarloReveal.test.tsx  slowResponseNotice.test.tsx  sparseCandlesPlaceholder.test.tsx
alphaforge-mind/tests/perf/: mcPerfUtils.ts  montecarloMemory.perf.test.ts  montecarloOverlay.perf.test.tsx  montecarloRedraw.perf.test.ts
alphaforge-mind/tests/smoke/: plain.test.js  vitestSanity.test.ts
alphaforge-mind/tests/types/: jest-axe.d.ts
alphaforge-mind/tests/unit/: canonicalJson.test.ts  monteCarloStats.test.ts  monteCarloStatsCache.test.ts
alphaforge-mind/tests/unit/backtest/: edgeCases.test.ts  runSelection.test.ts
alphaforge-mind/tests/unit/determinism/: seedEcho.test.ts
alphaforge-mind/tests/unit/featureFlags/: toggles.test.tsx
alphaforge-mind/tests/unit/montecarlo/: defaultPaths.test.ts
alphaforge-mind/tests/unit/observability/: timing.test.ts
alphaforge-mind/tests/unit/perf/: perfProbe.test.ts
alphaforge-mind/tests/unit/risk/: riskValidation.test.ts
alphaforge-mind/tests/unit/strategy/: params.test.ts
alphaforge-mind/tests/unit/validation/: backtestInput.test.ts  dateSpan.test.ts
alphaforge-mind/tests/utils/: mockCanvas.ts
alphaforge-mind/tests/visual/: chartBaseline.spec.ts
benchmarks/: _tmp_ingestion_perf_nvda_1d.json  baseline_ingestion_nvda_1d.json  dataset_provenance_nvda_1d.json  golden_run_nvda_1d.json
changelog/: 0.3.2-dev.md
changelog/fragments/: constitution-1.1.0.md
data/: NVDA_5y.csv
docs/: mypy-strictness.md  spec-kit.md
docs/api/: overview.md
docs/architecture/: truthful_run.md
docs/dev/: import-shims.md
docs/roadmap/: strategy_registry.md
infra/: __init__.py
infra/cache/: __init__.py  candles.py  features.py  metrics.py
infra/migrations/: 001_init.sql
scripts/: baseline_capture.py  ci_check_cache_shims.py  launch_alphaforge.py  perf_baseline.py  poetry_self_check.py  post_install_health_check.py  run_coverage_slices.py  run_local_nvda.ps1  run_test_slices.py  verify_lock_sync.py  verify_replay.py
scripts/bench/: capture_ingestion_baseline.py  check_dataset_presence.py  generate_provenance.py  ingestion_baseline_diff.py  ingestion_perf.py  perf_run.py  risk_slippage.py
scripts/changelog/: enforce_constitution_fragment.py
scripts/ci/: MIGRATIONS_HEAD.txt  bootstrap_runtime_probe.py  check_cross_root.py  check_env_minimal.py  check_migrations_head.py  (+8 more)
shared/: README.md
tests/: conftest.py  factories.py  test_request_logging.py
(+645 files in other folders)
